LRDOCS-13076 Remove `-Djava.locale.providers=JRE,COMPAT,CLDR`